<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ui.scores.ScoresFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1">

        <ImageButton
            android:id="@+id/decreaseTeam1By1"
            style="@style/MinusButtons"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/decreaseTeam1By2"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_below="@+id/decreaseTeam1By1"
            android:layout_marginTop="8dp"
            android:text="2" />

        <Button
            android:id="@+id/decreaseTeam1By3"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/decreaseTeam1By2"
            android:layout_toRightOf="@+id/decreaseTeam1By2"
            android:text="3" />

        <Button
            android:id="@+id/decreaseTeam1By4"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/decreaseTeam1By2"
            android:layout_toRightOf="@+id/decreaseTeam1By3"
            android:text="4" />

        <Button
            android:id="@+id/decreaseTeam1By5"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_below="@id/decreaseTeam1By2"
            android:text="5" />

        <Button
            android:id="@+id/decreaseTeam1By6"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/decreaseTeam1By5"
            android:layout_toRightOf="@id/decreaseTeam1By5"
            android:text="6" />

        <Button
            android:id="@+id/decreaseTeam1By7"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/decreaseTeam1By5"
            android:layout_toRightOf="@id/decreaseTeam1By6"
            android:text="7" />

        <TextView
            android:id="@+id/team1"
            style="@style/TeamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/team_1" />

        <TextView
            android:id="@+id/score1"
            style="@style/ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/zero" />

        <ImageButton
            android:id="@+id/increaseTeam1By1"
            style="@style/PlusButtons"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/increaseTeam1By2"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_below="@+id/increaseTeam1By1"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/increaseTeam1By3"
            android:text="2" />

        <Button
            android:id="@+id/increaseTeam1By3"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/increaseTeam1By4"
            android:layout_toLeftOf="@+id/increaseTeam1By4"
            android:text="3" />

        <Button
            android:id="@+id/increaseTeam1By4"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/increaseTeam1By2"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:text="4" />

        <Button
            android:id="@+id/increaseTeam1By5"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/increaseTeam1By7"
            android:layout_toLeftOf="@id/increaseTeam1By6"
            android:text="5" />

        <Button
            android:id="@+id/increaseTeam1By6"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/increaseTeam1By7"
            android:layout_toLeftOf="@id/increaseTeam1By7"
            android:text="6" />

        <Button
            android:id="@+id/increaseTeam1By7"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_below="@id/increaseTeam1By4"
            android:layout_alignParentRight="true"
            android:text="7" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/decreaseTeam2By1"
            style="@style/MinusButtons"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/decreaseTeam2By2"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_below="@+id/decreaseTeam2By1"
            android:layout_marginTop="8dp"
            android:text="2" />

        <Button
            android:id="@+id/decreaseTeam2By3"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/decreaseTeam2By2"
            android:layout_toRightOf="@+id/decreaseTeam2By2"
            android:text="3" />

        <Button
            android:id="@+id/decreaseTeam2By4"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/decreaseTeam2By2"
            android:layout_toRightOf="@+id/decreaseTeam2By3"
            android:text="4" />

        <Button
            android:id="@+id/decreaseTeam2By5"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_below="@id/decreaseTeam2By2"
            android:text="5" />

        <Button
            android:id="@+id/decreaseTeam2By6"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/decreaseTeam2By5"
            android:layout_toRightOf="@id/decreaseTeam2By5"
            android:text="6" />

        <Button
            android:id="@+id/decreaseTeam2By7"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/decreaseTeam2By5"
            android:layout_toRightOf="@id/decreaseTeam2By6"
            android:text="7" />

        <TextView
            android:id="@+id/team2"
            style="@style/TeamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/team_2" />

        <TextView
            android:id="@+id/score2"
            style="@style/ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/zero" />

        <ImageButton
            android:id="@+id/increaseTeam2By1"
            style="@style/PlusButtons"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/increaseTeam2By2"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_below="@+id/increaseTeam2By1"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/increaseTeam2By3"
            android:text="2" />

        <Button
            android:id="@+id/increaseTeam2By3"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/increaseTeam2By4"
            android:layout_toLeftOf="@+id/increaseTeam2By4"
            android:text="3" />

        <Button
            android:id="@+id/increaseTeam2By4"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/increaseTeam2By2"
            android:layout_alignParentRight="true"
            android:text="4" />

        <Button
            android:id="@+id/increaseTeam2By5"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/increaseTeam2By7"
            android:layout_toLeftOf="@id/increaseTeam2By6"
            android:text="5" />

        <Button
            android:id="@+id/increaseTeam2By6"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_alignBottom="@id/increaseTeam2By7"
            android:layout_toLeftOf="@id/increaseTeam2By7"
            android:text="6" />

        <Button
            android:id="@+id/increaseTeam2By7"
            android:layout_width="@dimen/subButton_size"
            android:layout_height="@dimen/subButton_size"
            android:layout_below="@id/increaseTeam2By4"
            android:layout_alignParentRight="true"
            android:text="7" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="48dp"
            android:text="@string/reset_btn" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancelLastAction"
            android:text="@string/cancel_last_btn" />
    </LinearLayout>
</LinearLayout>